Optimise RSTA, XZ, JLine dependencies. Fix JLine REPL bug.